apply plugin: 'kotlin'
apply plugin: 'maven-publish'
apply plugin: 'jacoco'
apply plugin: 'pmd'
apply plugin: 'kotlin-kapt'
apply plugin: 'java'
apply plugin: 'java-test-fixtures'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "com.squareup:kotlinpoet:$kotlin_poet_version"
    implementation "com.squareup:kotlinpoet-metadata:$kotlin_poet_version"
    implementation project(path: ':crystal-map-api', configuration: 'default')
    implementation project(path: ':crystal-map-core', configuration: 'default')
    implementation "org.apache.commons:commons-lang3:$commons_lang3_version"
    implementation 'com.j2html:j2html:1.6.0'
    implementation "org.jetbrains.kotlin:kotlin-metadata-jvm:$kotlin_version"
    testImplementation 'com.google.testing.compile:compile-testing:0.23.0'
    testImplementation("org.junit.jupiter:junit-jupiter-api:$junit_version")
    testImplementation 'dev.zacsweers.kctfork:core:0.11.1'
    testImplementation "org.mockito:mockito-core:$mockito_version"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_core_version"
    testImplementation(testFixtures(project(':crystal-map-test-fixtures')))
    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
    kapt "com.google.auto.service:auto-service:1.1.1"
    compileOnly "com.google.auto.service:auto-service:1.1.1"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
}

targetCompatibility = JavaVersion.VERSION_17
sourceCompatibility = JavaVersion.VERSION_17

java {
    withSourcesJar()
    withJavadocJar()
}

if (JavaVersion.current() >= JavaVersion.VERSION_16) {
    test {
        jvmArgs(
                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        )
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId project.group
            artifactId project.name
            version project.version
            from components.java
        }
    }
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    group 'verification'
    dependsOn 'test'

    reports {
        xml.required = true
        html.required = false
    }
}



